syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message VisitCityRequestDto {
  int32 player_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string city_id = 3;
}
